# Cura

./: .gitignore  Cura.code-workspace  QUICKSTART.md  README.md
docs/: ARCHITECTURE.md  GETTING_STARTED.md
docs/phase1/: DEBUGGING_GUIDE.md  EXERCISES.md  RESOURCES.md  ROADMAP.md  STUDY_GUIDE_MONTH1-2.md
docs/phase1/exercises/: Cargo.toml
docs/phase1/exercises/src/: ex01_ownership.rs  ex02_borrowing.rs  ex03_lifetimes.rs  ex04_result.rs  ex05_errors.rs  ex06_pointers.rs  ex07_validation.rs  ex08_buffer.rs  ex09_strings.rs  ex10_callbacks.rs  project_file_filter.rs
kernel/CuraFilter/: Cargo.toml  README.md
kernel/CuraFilter/src/: callbacks.rs  driver.rs  lib.rs  process.rs
research/datasets/: README.md
research/models/: README.md
service/CuraCore/: CMakeLists.txt  README.md
service/CuraCore/include/: cura_core.h
service/CuraCore/src/: main.cpp
tools/scripts/: README.md  build_all.ps1  clean_all.ps1  run_exercises.ps1  test_driver.ps1
ui/CuraUI/: PLACEHOLDER.txt  README.md
